--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <button class="eye" onclick="encriptacio()">eye</button>
             <!--<i style="font-size:24px" class="fa">&#xf06e;</i> -->
         </div>
-            <button id="start" onclick="startGame()">Començar partida</button>
+            <button id="empezar" onclick="startGame()">Començar partida</button>
     </header>
 
     <main>
