Falta punts partida actual y partida amb més punts

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             
             <div class="estadisticas">
                 <h2>JUGADOR 1</h2>
-                <p>PUNTS PARTIDES ACTUALS <span>0</span></p>
-                <p>TOTAL PARTIDES <span>0</span></p>
-                <p>PARTIDES GUANYADES <span>0</span></p>
-                <p>PARTIDA AMB MÉS PUNTS: <span>0</span></p>
+                <p>PUNTS PARTIDES ACTUALS <span id="nPoints">0</span></p>
+                <p>TOTAL PARTIDES <span id="totalGames">0</span></p>
+                <p>PARTIDES GUANYADES <span id="winGames">0</span></p>
+                <p>PARTIDA AMB MÉS PUNTS: <span id="gameMaxPoints">0</span></p>
 
             </div>
 
