--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style/style.css"/>
-   <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">--> 
 </head>
 <body>
 
     <header>
         <div class="jugar">
             <input id="word" type="password" placeholder="Introdueix una paraula">
-            <button class="eye" onclick="encriptacio()">eye</button>
-            <!--<i style="font-size:24px" class="fa">&#xf06e;</i> -->
+            <button class="eye" onclick="encriptacio()">mostrar</button>
         </div>
             <button id="empezar" onclick="startGame()">Començar partida</button>
     </header>
@@ -73,15 +71,9 @@
             <button id="lletra_25" onclick="jugarLletra(this);">Y</button>
             <button id="lletra_26" onclick="jugarLletra(this);">Z</button>
 
-
-
         </div>
 
     
-
-
-
-
     </main>
 
     <script src="script/game.js"></script>
