--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ahorcado</title>
     <link rel="stylesheet" href="style/style.css"/>
 </head>
 <body>
@@ -25,19 +25,24 @@
         
         <div class="joc">
             
-            <div class="estadisticas">
+            <div id="estadisticas" class="estadisticas">
                 <h2>JUGADOR 1</h2>
                 <p>PUNTS PARTIDES ACTUALS <span id="nPoints">0</span></p>
                 <p>TOTAL PARTIDES <span id="totalGames">0</span></p>
                 <p>PARTIDES GUANYADES <span id="winGames">0</span></p>
                 <p>PARTIDA AMB MÉS PUNTS: <span id="gameMaxPoints">0</span></p>
-
             </div>
 
             <div class="imagenes">
                 <img id ="imatge" src="imatges/penjat_0.jpg"></img>    
             </div>
-            <div class="vacio"></div>
+            <div id="estadisticas2"class="estadisticas2">
+                <h2>JUGADOR 2</h2>
+                <p>PUNTS PARTIDES ACTUALS <span id="nPoints2">0</span></p>
+                <p>TOTAL PARTIDES <span id="totalGames2">0</span></p>
+                <p>PARTIDES GUANYADES <span id="winGames2">0</span></p>
+                <p>PARTIDA AMB MÉS PUNTS: <span id="gameMaxPoints2">0</span></p>
+            </div>
 
         </div>
 
